[workspace]
members = [
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
]
resolver = "2"


[workspace.package]
version = "2022.0.0"
edition = "2021"
authors = ["Dylan Thies"]
repository = "https://github.com/smellyfis/AOC-2022.git"

[workspace.dependencies]
derive-getters = "0.3.0"
itertools = "0.11.0"
log = "0.4.20"
nom = "7.1.3"
