[workspace]
resolver = "2"
members = [ "day-*" ]

[workspace.package]
version = "2023.0.0"
edition = "2021"
authors = [ "Dylan Thies" ]
repository = "https://github.com/smellyfis/AOC-2023.git"

[workspace.dependencies]
derive-getters = "0.3.0"
error-stack = "0.4.1"
itertools = "0.12.0"
log = "0.4.20"
nom = "7.1.3"
nom_locate= "4.2.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
dhat = "0.3.2"
glam = "0.24.2"
petgraph = "0.6.4"
num = "0.4.1"
num-traits = "0.2.17"
rustworkx-core = "0.13.2"
pathfinding = "4.8.0"
test-log = {version="0.2.14", features=["default", "unstable"]}


[profile.dhat]
inherits = "release"
debug = true
