[package]
name = "day11"
description = "AOC 2022 Day 11"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters.workspace = true
itertools.workspace = true
log.workspace = true
nom.workspace = true
