[package]
name = "day-1"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters.workspace = true
error-stack.workspace = true
itertools.workspace = true
log.workspace = true
logs = "0.7.1"
nom.workspace = true

[dev-dependencies]
test-log = {version="0.2.14", features=["default", "unstable"]}
