[package]
name = "day-10"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
nom_locate = {workspace = true }
itertools.workspace = true
glam = "0.24.2"

[dev-dependencies]
rstest = {workspace = true}
