[package]
name = "day-23"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { workspace = true }
itertools = {workspace = true }
glam.workspace = true
nom_locate.workspace = true
petgraph = "0.6.4"
