[package]
name = "day-25"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { workspace = true }
itertools = {workspace = true }
petgraph = "0.6.4"
rustworkx-core = "0.13.2"
