[package]
name = "day-7"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
itertools.workspace = true
num.workspace = true
num-traits.workspace = true
dhat = { workspace = true }
thiserror.workspace = true

[features]
dhat-heap = []
